--- a/kubernetes/pvc.yaml
+++ b/kubernetes/pvc.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: project2-pvc-caiocaldeira
-  labels:
-    namespace: caiocaldeira
+  name: project2-pv2-caiocaldeira
+  namespace: caiocaldeira
 spec:
+  storageClassName: default-storage-class-caiocaldeira
   accessModes:
-  - ReadWriteMany
+    - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
   selector:
     matchLabels:
-      namespace: caiocadeira
+      namespace: caiocaldeira
