--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -9,7 +9,7 @@ spec:
     app: playlist-recommender
     role: server
   ports:
-  - protocol: TCP
+  - protocol: http
     port: 52007
     nodePort: 52007
     targetPort: 5000
