--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -2,12 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: playlist-recommender-service
-  labels:
-    app: playlist-recommender
+  namespace: caiocaldeira
 spec:
   selector:
     app: playlist-recommender
-    role: server
   ports:
   - protocol: http
     port: 52007
