--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -2,12 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: playlist-recommender-service
-  namespace: caiocaldeira
+  labels:
+    app: playlist-recommender
 spec:
   selector:
     app: playlist-recommender
+    role: server
   ports:
-  - protocol: http
+  - protocol: TCP
     port: 52007
     nodePort: 52007
     targetPort: 5000
