--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -2,15 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: playlist-recommender-service
-  labels:
-    app: playlist-recommender
+  namespace: caiocaldeira
 spec:
   selector:
     app: playlist-recommender
-    role: server
   ports:
-  - protocol: TCP
-    port: 52007
-    nodePort: 52007
-    targetPort: 5000
+    - name: http
+      port: 52007
+      targetPort: 5000
+      nodePort: 52007
   type: NodePort
