--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /server
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-ENV VERSION=0.8
+ENV VERSION=0.92
 ENV DATE=10-01-2025
 ENV MODEL_PATH="/project2-pv2/rules.pkl"
 
@@ -16,14 +16,15 @@ ENV MODEL_PATH="/project2-pv2/rules.pkl"
 COPY app.py .
 COPY models.py .
 COPY service.env .
+COPY static static
+COPY templates templates
 
 # Set environment variables
-ENV FLASK_APP=app.py
-ENV FLASK_RUN_HOST=0.0.0.0
-ENV FLASK_RUN_PORT=5000
+ENV HOST=0.0.0.0
+ENV PORT=5000
 
 # Expose port 5000
 EXPOSE 5000
 
 # Set the default command to run the Flask app
-CMD ["flask", "run"]
+CMD ["python", "app.py"]
