Point to correct name on deploy

--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -5,8 +5,7 @@ metadata:
   namespace: caiocaldeira
 spec:
   selector:
-    app: playlist-recommender
-    role: server
+    app: server-app
   ports:
   - protocol: TCP
     port: 52007
