--- a/kubernetes/deploy.yaml
+++ b/kubernetes/deploy.yaml
@@ -7,11 +7,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: server
+      app: server-app
   template:
     metadata:
       labels:
-        app: server
+        app: server-app
     spec:
       containers:
         - name: server-container
