--- a/kubernetes/model.yaml
+++ b/kubernetes/model.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: model-job-abc
+  generateName: model-job-
   namespace: caiocaldeira
 spec:
   template:
